# cours-m2

./: .gitignore  README.md
algo_distrib/: diffCentralise.py  diffusionAnneau.py
algo_distrib/exos/: diffCentralise.py  test.py
algo_distrib/projet/: Bidule.py  Com.py  Launcher.py  Process.py  readme.md
algo_distrib/tp/: Launcher.py  Process.py
complexite_algo/tp_2/: Equipe.md  README.md  generatorGraphFixedNumberEdges.py  generatorGraphRandEdges.py  main.py  partie_1.py  solve3Clique.py  solve3ColorSat.py  solveClique.py  test_clique_nok.txt  test_nok.txt  verificateur.py
crypto/tp2/: .gitignore  DiplomeGenerator.py  EncodeurDecodeur.py  README.md  Signateur.py  main.py
data_mining/: 01-knn.ipynb  02-cnnBasic.ipynb  03_word_embedding.ipynb
devops/: docker-compose.yml
devops/api/: dockerfile  index.js  package-lock.json  package.json
devops/front/: README.md  package-lock.json  package.json
devops/k8s/: api-deployement.yml  api-ingress.yml  api-service.yml  front-deployement.yml  front-service.yml
machine_learning/: .gitignore  tp_1.ipynb  tp_2.ipynb  tp_3.ipynb  tp_4.ipynb
machine_learning/pres/: pres.md
recherche_op/: Sommet.py  flo.py  graph.py  graph.txt  td1.py  test.txt  tp_1.py  tp_1_non_oriente.txt  tp_1_oriente.txt
recherche_op/exam/: Graph.py  GraphDijkstra.py  Sommet.py  exam.ipynb  flo.txt  graph.txt  main.py  simplex.py  test.txt
recherche_op/old/: fermier.txt  graph.py  simplex.py  (+1 more)
traitement_image/: readme.md
traitement_image/tp_1/: CMakeLists.txt  main.cpp  video.cpp
traitement_image_avance/: skynet.ipynb  swinIR.md
(+85 files in other folders)
